<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.main.input.InputFragment">


    <ImageView
        android:id="@+id/img_input_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:src="@drawable/ic_back_black"
        app:layout_constraintBottom_toBottomOf="@+id/txt_input_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_input_title" />

    <TextView
        android:id="@+id/txt_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/input_title_default"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margin_middle"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_surname_title"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_input_title" />

    <EditText
        android:id="@+id/edit_input_surname"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/margins"
        android:background="@drawable/background_white_shadow"
        android:ems="10"
        android:hint="@string/input_surname"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_name_title"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_surname" />

    <EditText
        android:id="@+id/edit_input_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/background_white_shadow"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="@+id/edit_input_surname"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_parents_title"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_name" />

    <EditText
        android:id="@+id/edit_input_parents"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/background_white_shadow"
        android:ems="10"
        android:hint="@string/input_parents"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="@+id/edit_input_name"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_number_title"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_parents" />

    <EditText
        android:id="@+id/edit_input_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/background_white_shadow"
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="@+id/edit_input_parents"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/input_email_title"
        android:textColor="#023047"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/edit_input_number" />

    <EditText
        android:id="@+id/edit_input_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/padding"
        android:background="@drawable/background_white_shadow"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="@+id/edit_input_number"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_input_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:background="@drawable/background_orange_btn"
        android:text="@string/input_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>