<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_cell_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding"
    android:background="@drawable/background_white_shadow">

    <TextView
        android:id="@+id/txt_cell_profile_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/cell_profile_date_default"
        android:textColor="#023047"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cell_profile_sum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/cell_profile_sum_title"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_cell_profile_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_cell_profile_date" />

    <TextView
        android:id="@+id/txt_cell_profile_penya_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/cell_profile_penya_title"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txt_cell_profile_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_cell_profile_sum_title" />

    <TextView
        android:id="@+id/txt_cell_profile_date_transaction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginBottom="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:text="@string/cell_profile_date_transaction_title"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_cell_profile_date"
        app:layout_constraintTop_toBottomOf="@+id/txt_cell_profile_penya_title" />

    <TextView
        android:id="@+id/txt_cell_profile_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margins"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cell_profile_sum_default"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cell_profile_sum_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_cell_profile_sum_title" />

    <TextView
        android:id="@+id/txt_cell_profile_penya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cell_profile_penya_default"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cell_profile_penya_title"
        app:layout_constraintEnd_toEndOf="@+id/txt_cell_profile_sum"
        app:layout_constraintTop_toTopOf="@+id/txt_cell_profile_penya_title" />

    <TextView
        android:id="@+id/txt_cell_profile_date_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/cell_profile_date_transaction_default"
        android:textColor="#023047"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_cell_profile_date_transaction_title"
        app:layout_constraintEnd_toEndOf="@+id/txt_cell_profile_sum"
        app:layout_constraintTop_toTopOf="@+id/txt_cell_profile_date_transaction_title" />
</androidx.constraintlayout.widget.ConstraintLayout>