<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".ui.main.categories.CategoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradient_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margins"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name_locolized"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_categories_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margins"
            android:background="@drawable/background_icon_white"
            android:padding="2dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:maxWidth="300dp"
            android:text="@string/advice1_categories"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="@dimen/margins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/advice3_categories"
            android:textColor=" #023047"
            app:layout_constraintBottom_toBottomOf="@+id/layout_categories_cars"
            app:layout_constraintEnd_toEndOf="@+id/layout_categories_home"
            app:layout_constraintStart_toStartOf="@+id/layout_categories_home"
            app:layout_constraintTop_toTopOf="@+id/layout_categories_cars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_categories_sailors"
            android:layout_width="@dimen/category_size"
            android:layout_height="@dimen/category_size"
            android:background="@drawable/background_white_shadow"
            app:layout_constraintEnd_toStartOf="@+id/layout_categories_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:src="@drawable/ic_credits_sailors"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_categories_sailors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginTop="@dimen/padding"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/categories_sailors_title"
                android:textColor=" #023047"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_categories_sailors_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/txt_categories_sailors_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginEnd="@dimen/margins"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/categories_sailors_desc"
                android:textColor=" #023047"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_categories_sailors_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_categories_home"
            android:layout_width="@dimen/category_size"
            android:layout_height="@dimen/category_size"
            android:background="@drawable/background_white_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/layout_categories_sailors"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:src="@drawable/ic_credits_homes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_categories_home_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginEnd="@dimen/margins"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/categories_home_title"
                android:textColor=" #023047"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_categories_home_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <TextView
                android:id="@+id/txt_categories_home_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginEnd="@dimen/margins"
                android:fontFamily="@font/montserrat"
                android:text="@string/categories_home_desc"
                android:textColor=" #023047"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_categories_home_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_categories_cars"
            android:layout_width="@dimen/category_size"
            android:layout_height="@dimen/category_size"
            android:layout_marginTop="@dimen/margins"
            android:background="@drawable/background_white_shadow"
            app:layout_constraintStart_toStartOf="@+id/layout_categories_sailors"
            app:layout_constraintTop_toBottomOf="@+id/layout_categories_sailors">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_middle"
                android:src="@drawable/ic_credits_cars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_categories_cars_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginEnd="@dimen/margins"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/categories_cars_title"
                android:textColor=" #023047"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_categories_cars_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <TextView
                android:id="@+id/txt_categories_cars_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/margins"
                android:layout_marginEnd="@dimen/margins"
                android:fontFamily="@font/montserrat"
                android:text="@string/categories_cars_desc"
                android:textColor=" #023047"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_categories_cars_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="250dp"
        android:layout_marginTop="@dimen/margins"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/advice2_categories"
        android:textColor="#023047"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />

    <EditText
        android:id="@+id/edit_categories_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginStart="@dimen/margins"
        android:layout_marginTop="@dimen/margins"
        android:layout_marginEnd="@dimen/margins"
        android:background="@drawable/background_white"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/edit_categories_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margins"
        android:background="@drawable/background_white"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="textPersonName"
        android:padding="@dimen/padding"
        app:layout_constraintEnd_toEndOf="@+id/edit_categories_name"
        app:layout_constraintStart_toStartOf="@+id/edit_categories_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_categories_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_categories_send"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/margins"
        android:background="@drawable/background_orange_btn"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_categories_name"
        app:layout_constraintStart_toStartOf="@+id/edit_categories_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_categories_number" />
</androidx.constraintlayout.widget.ConstraintLayout>